--- a/manage-dev.properties
+++ b/manage-dev.properties
@@ -15,7 +15,7 @@ security.oauth2.resource.userInfoUri= http://localhost/sso/user
 #security.oauth2.resource.tokenInfoUri = http://localhost:7780/oauth/check_token
 #security.oauth2.authorization.checkTokenAccess = http://localhost:7780/oauth/check_token
 security.oauth2.resource.preferTokenInfo= false
-server.session.cookie.name=UISESSION
+server.session.cookie.name=MANAGE_SESSION
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=30000
 ribbon.ReadTimeout=20000
 ribbon.ConnectTimeout=20000
