--- a/product-dev.properties
+++ b/product-dev.properties
@@ -31,7 +31,8 @@ c3p0.acquireRetryDelay=1000
 c3p0.breakAfterAcquireFailure=false
 c3p0.testConnectionOnCheckout=false
 
-security.oauth2.resource.userInfoUri= http://localhost:8000/user
+
+security.oauth2.resource.userInfoUri= http://localhost/sso/user
 #security.oauth2.resource.tokenInfoUri= http://localhost:7780/oauth/check_token
 security.oauth2.resource.preferTokenInfo= false
 server.session.cookie.name= PRODUCT_SESSION
