--- a/userbase-dev.properties
+++ b/userbase-dev.properties
@@ -1,11 +1,8 @@
- #==============local config======================
-
-
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
 #security config
-#security.basic.enabled=true 
+security.basic.enabled=false 
 
 #data pool
 spring.jpa.hibernate.ddl-auto = update
@@ -26,8 +23,15 @@ c3p0.acquireRetryAttempts=30
 c3p0.acquireRetryDelay=1000
 c3p0.breakAfterAcquireFailure=false
 c3p0.testConnectionOnCheckout=false
+
+security.oauth2.resource.userInfoUri= http://localhost/sso/user
+#security.oauth2.resource.tokenInfoUri= http://localhost:7780/oauth/check_token
+security.oauth2.resource.preferTokenInfo= false
+
 server.port=7775
 server.session.cookie.name= USERBASE_SESSION
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
 #logging.level.root=INFO
+ 
+ 
