--- a/userbase-dev.properties
+++ b/userbase-dev.properties
@@ -1,3 +1,5 @@
+management.security.enabled=false
+
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
