--- a/manage-dev.properties
+++ b/manage-dev.properties
@@ -24,3 +24,5 @@ server.port=8080
 spring.application.name=manage
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
+
+spring.szipkin.baseUrl=http://localhost:10010
