--- a/product-dev.properties
+++ b/product-dev.properties
@@ -40,3 +40,5 @@ server.port=7779
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
 
+spring.szipkin.baseUrl=http://localhost:10010
+
