add sleuth config

--- a/manage-dev.properties
+++ b/manage-dev.properties
@@ -26,3 +26,4 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
 
 spring.szipkin.baseUrl=http://localhost:10010
+sleuth.sampler.percentage=1.0
