--- a/product-dev.properties
+++ b/product-dev.properties
@@ -41,4 +41,5 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
 
 spring.szipkin.baseUrl=http://localhost:10010
+sleuth.sampler.percentage=1.0
 
