add-sleuth-config-0.0.3

--- a/userbase-dev.properties
+++ b/userbase-dev.properties
@@ -1,8 +1,5 @@
 management.security.enabled=false
 
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
-
 #security config
 security.basic.enabled=false 
 
@@ -36,4 +33,6 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:7771/eureka
 #logging.level.root=INFO
  
+spring.szipkin.baseUrl=http://localhost:10010
+sleuth.sampler.percentage=1.0
  
